--- a/phpstan.neon
+++ b/phpstan.neon
@@ -26,7 +26,7 @@ parameters:
     # =========================================================================
     # STRICTNESS LEVEL (0-9, 9 is strictest)
     # =========================================================================
-    level: 8
+    level: 5
 
     # =========================================================================
     # BUILD DIRECTORY
@@ -37,7 +37,7 @@ parameters:
     # TYPE CHECKING CONFIGURATION
     # =========================================================================
     checkUnionTypes: true
-    treatPhpDocTypesAsCertain: true
+    treatPhpDocTypesAsCertain: false
     checkExplicitMixedMissingReturn: true
     checkFunctionNameCase: true
     checkInternalClassCaseSensitivity: true
