--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,9 @@
     },
     "require": {
         "php": "^8.4",
-        "symfony/console": "^8.0",
-        "symfony/process": "^8.0",
-        "symfony/finder": "^8.0",
+        "symfony/console": "^7.0|^8.0",
+        "symfony/process": "^7.0|^8.0",
+        "symfony/finder": "^7.0|^8.0",
         "laravel/prompts": "^0.3",
         "illuminate/support": "^12.0",
         "illuminate/container": "^12.0"
