--- a/stubs/docker/magento-full.yml
+++ b/stubs/docker/magento-full.yml
@@ -18,28 +18,38 @@
 #   Elasticsearch: localhost:9200
 #   phpMyAdmin: http://localhost:8080
 
-version: '3.8'
+version: "3.8"
 
 services:
   # MySQL Database Service
   mysql:
     image: mysql:8.0
-    container_name: {{CONTAINER_PREFIX}}-mysql
+    container_name: "{{CONTAINER_PREFIX}}-mysql"
     restart: unless-stopped
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: {{DB_ROOT_PASSWORD}}
-      MYSQL_DATABASE: {{DB_NAME}}
-      MYSQL_USER: {{DB_USER}}
-      MYSQL_PASSWORD: {{DB_PASSWORD}}
+      MYSQL_ROOT_PASSWORD: "{{DB_ROOT_PASSWORD}}"
+      MYSQL_DATABASE: "{{DB_NAME}}"
+      MYSQL_USER: "{{DB_USER}}"
+      MYSQL_PASSWORD: "{{DB_PASSWORD}}"
     ports:
       - "{{DB_PORT}}:3306"
     volumes:
-      - {{VOLUME_PREFIX}}-mysql-data:/var/lib/mysql
+      - "{{VOLUME_PREFIX}}-mysql-data:/var/lib/mysql"
     networks:
-      - {{NETWORK_NAME}}
+      - "{{NETWORK_NAME}}"
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p{{DB_ROOT_PASSWORD}}"]
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u",
+          "root",
+          "-p{{DB_ROOT_PASSWORD}}",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -47,14 +57,14 @@ services:
   # Redis Service for Caching and Sessions
   redis:
     image: redis:7-alpine
-    container_name: {{CONTAINER_PREFIX}}-redis
+    container_name: "{{CONTAINER_PREFIX}}-redis"
     restart: unless-stopped
     ports:
       - "{{REDIS_PORT}}:6379"
     volumes:
-      - {{VOLUME_PREFIX}}-redis-data:/data
+      - "{{VOLUME_PREFIX}}-redis-data:/data"
     networks:
-      - {{NETWORK_NAME}}
+      - "{{NETWORK_NAME}}"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -64,7 +74,7 @@ services:
   # Elasticsearch Service for Catalog Search
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.15
-    container_name: {{CONTAINER_PREFIX}}-elasticsearch
+    container_name: "{{CONTAINER_PREFIX}}-elasticsearch"
     restart: unless-stopped
     environment:
       - discovery.type=single-node
@@ -73,11 +83,12 @@ services:
     ports:
       - "{{ELASTICSEARCH_PORT}}:9200"
     volumes:
-      - {{VOLUME_PREFIX}}-elasticsearch-data:/usr/share/elasticsearch/data
+      - "{{VOLUME_PREFIX}}-elasticsearch-data:/usr/share/elasticsearch/data"
     networks:
-      - {{NETWORK_NAME}}
+      - "{{NETWORK_NAME}}"
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
+      test:
+        ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -85,30 +96,30 @@ services:
   # phpMyAdmin Service (Optional)
   phpmyadmin:
     image: phpmyadmin:latest
-    container_name: {{CONTAINER_PREFIX}}-phpmyadmin
+    container_name: "{{CONTAINER_PREFIX}}-phpmyadmin"
     restart: unless-stopped
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
       PMA_USER: root
-      PMA_PASSWORD: {{DB_ROOT_PASSWORD}}
+      PMA_PASSWORD: "{{DB_ROOT_PASSWORD}}"
     ports:
       - "{{PHPMYADMIN_PORT}}:80"
     networks:
-      - {{NETWORK_NAME}}
+      - "{{NETWORK_NAME}}"
     depends_on:
       - mysql
 
 # Named volumes for data persistence
 volumes:
-  {{VOLUME_PREFIX}}-mysql-data:
+  "{{VOLUME_PREFIX}}-mysql-data":
     driver: local
-  {{VOLUME_PREFIX}}-redis-data:
+  "{{VOLUME_PREFIX}}-redis-data":
     driver: local
-  {{VOLUME_PREFIX}}-elasticsearch-data:
+  "{{VOLUME_PREFIX}}-elasticsearch-data":
     driver: local
 
 # Network for service communication
 networks:
-  {{NETWORK_NAME}}:
+  "{{NETWORK_NAME}}":
     driver: bridge
