--- a/stubs/docker/mariadb.yml
+++ b/stubs/docker/mariadb.yml
@@ -14,25 +14,25 @@
 #   MariaDB: localhost:3306
 #   phpMyAdmin: http://localhost:8080
 
-version: '3.8'
+version: "3.8"
 
 services:
   # MariaDB Database Service
   mariadb:
     image: mariadb:10.11
-    container_name: {{CONTAINER_PREFIX}}-mariadb
+    container_name: "{{CONTAINER_PREFIX}}-mariadb"
     restart: unless-stopped
     environment:
-      MARIADB_ROOT_PASSWORD: {{DB_ROOT_PASSWORD}}
-      MARIADB_DATABASE: {{DB_NAME}}
-      MARIADB_USER: {{DB_USER}}
-      MARIADB_PASSWORD: {{DB_PASSWORD}}
+      MARIADB_ROOT_PASSWORD: "{{DB_ROOT_PASSWORD}}"
+      MARIADB_DATABASE: "{{DB_NAME}}"
+      MARIADB_USER: "{{DB_USER}}"
+      MARIADB_PASSWORD: "{{DB_PASSWORD}}"
     ports:
       - "{{DB_PORT}}:3306"
     volumes:
-      - {{VOLUME_PREFIX}}-mariadb-data:/var/lib/mysql
+      - "{{VOLUME_PREFIX}}-mariadb-data:/var/lib/mysql"
     networks:
-      - {{NETWORK_NAME}}
+      - "{{NETWORK_NAME}}"
     healthcheck:
       test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
       interval: 10s
@@ -42,26 +42,26 @@ services:
   # phpMyAdmin Service (Optional)
   phpmyadmin:
     image: phpmyadmin:latest
-    container_name: {{CONTAINER_PREFIX}}-phpmyadmin
+    container_name: "{{CONTAINER_PREFIX}}-phpmyadmin"
     restart: unless-stopped
     environment:
       PMA_HOST: mariadb
       PMA_PORT: 3306
       PMA_USER: root
-      PMA_PASSWORD: {{DB_ROOT_PASSWORD}}
+      PMA_PASSWORD: "{{DB_ROOT_PASSWORD}}"
     ports:
       - "{{PHPMYADMIN_PORT}}:80"
     networks:
-      - {{NETWORK_NAME}}
+      - "{{NETWORK_NAME}}"
     depends_on:
       - mariadb
 
 # Named volumes for data persistence
 volumes:
-  {{VOLUME_PREFIX}}-mariadb-data:
+  "{{VOLUME_PREFIX}}-mariadb-data":
     driver: local
 
 # Network for service communication
 networks:
-  {{NETWORK_NAME}}:
+  "{{NETWORK_NAME}}":
     driver: bridge
