--- a/stubs/docker/mysql.yml
+++ b/stubs/docker/mysql.yml
@@ -14,27 +14,37 @@
 #   MySQL: localhost:3306
 #   phpMyAdmin: http://localhost:8080
 
-version: '3.8'
+version: "3.8"
 
 services:
   # MySQL Database Service
   mysql:
     image: mysql:8.0
-    container_name: {{CONTAINER_PREFIX}}-mysql
+    container_name: "{{CONTAINER_PREFIX}}-mysql"
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: {{DB_ROOT_PASSWORD}}
-      MYSQL_DATABASE: {{DB_NAME}}
-      MYSQL_USER: {{DB_USER}}
-      MYSQL_PASSWORD: {{DB_PASSWORD}}
+      MYSQL_ROOT_PASSWORD: "{{DB_ROOT_PASSWORD}}"
+      MYSQL_DATABASE: "{{DB_NAME}}"
+      MYSQL_USER: "{{DB_USER}}"
+      MYSQL_PASSWORD: "{{DB_PASSWORD}}"
     ports:
       - "{{DB_PORT}}:3306"
     volumes:
-      - {{VOLUME_PREFIX}}-mysql-data:/var/lib/mysql
+      - "{{VOLUME_PREFIX}}-mysql-data:/var/lib/mysql"
     networks:
-      - {{NETWORK_NAME}}
+      - "{{NETWORK_NAME}}"
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p{{DB_ROOT_PASSWORD}}"]
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u",
+          "root",
+          "-p{{DB_ROOT_PASSWORD}}",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -42,26 +52,26 @@ services:
   # phpMyAdmin Service (Optional)
   phpmyadmin:
     image: phpmyadmin:latest
-    container_name: {{CONTAINER_PREFIX}}-phpmyadmin
+    container_name: "{{CONTAINER_PREFIX}}-phpmyadmin"
     restart: unless-stopped
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
       PMA_USER: root
-      PMA_PASSWORD: {{DB_ROOT_PASSWORD}}
+      PMA_PASSWORD: "{{DB_ROOT_PASSWORD}}"
     ports:
       - "{{PHPMYADMIN_PORT}}:80"
     networks:
-      - {{NETWORK_NAME}}
+      - "{{NETWORK_NAME}}"
     depends_on:
       - mysql
 
 # Named volumes for data persistence
 volumes:
-  {{VOLUME_PREFIX}}-mysql-data:
+  "{{VOLUME_PREFIX}}-mysql-data":
     driver: local
 
 # Network for service communication
 networks:
-  {{NETWORK_NAME}}:
+  "{{NETWORK_NAME}}":
     driver: bridge
